--- a/FreeTTS/docs/RELEASE_NOTES
+++ b/FreeTTS/docs/RELEASE_NOTES
@@ -8,5 +8,9 @@
 
 Change history for FreeTTS.
 --------------------------
-December 14, 2001 	V1.0  		- First public release
-November  7, 2001 	V0.9  		- Internal Test Release
+December 21, 2001	V1.0.3  - Added .bat files for win32 demos
+December 20, 2001	V1.0.2  - Added jsapi.exe - win32 jsapi installer
+December 20, 2001	V1.0.1  - Added jsapi.sh - unix jsapi installer
+December 14, 2001 	V1.0   	- First public release
+November  7, 2001 	V0.9    - Internal Test Release
+
